crates/smart-config/tests/ui/derives/nest_and_flatten_config.stderr
error: cannot specify both `nest` and `flatten` for config
  --> tests/ui/derives/nest_and_flatten_config.rs:10:5
   |
10 | /     #[config(nest, flatten)]
11 | |     bogus: NestedConfig,
   | |_______________________^
